--- a/parts/intro.tex
+++ b/parts/intro.tex
@@ -1,6 +1,7 @@
 This paper is motivated by ..... \Emna{A completer}
+\Maxime{Ajouter quelques généralités sur les BRN}
 
-Our goal in this paper is to develop exhaustive methods to analyze Biological Regulatory Networks modeled in Process Hitting. With respect to PH dynamics, this analysis consists in three kinds of results:
+Our goal in this paper is to develop exhaustive methods to analyze a Biological Regulatory Network (BRN) modeled in Process Hitting (PH). With respect to PH dynamics, this analysis leads to three kinds of results:
 \begin{itemize}
 \item[-] Finding all possible steady states of a BRN,
 \item[-] Computing all cycles with fixed size $N$ ($N \in \mathsf{N}+$ ),
