switch prettyref back on

--- a/main.tex
+++ b/main.tex
@@ -103,8 +103,8 @@
 
 % Pretty ref
 \usepackage{prettyref}
-%\newrefformat{def}{Definition~\ref{#1}}
-%\newrefformat{fig}{Figure~\ref{#1}}
+\newrefformat{def}{Definition~\ref{#1}}
+\newrefformat{fig}{Figure~\ref{#1}}
 \newrefformat{tab}{Table~\ref{#1}}
 %%\newrefformat{pro}{Property~\ref{#1}}
 %%\newrefformat{pps}{Proposition~\ref{#1}}
@@ -113,7 +113,7 @@
 %\newrefformat{sec}{Section~\ref{#1}}
 %%\newrefformat{subsec}{Subsect.~\ref{#1}}
 %%\newrefformat{suppl}{Appendix~\ref{#1}}
-%\newrefformat{ex}{Example~\ref{#1}}
+\newrefformat{ex}{Example~\ref{#1}}
 %%\newrefformat{eq}{Eq.~\eqref{#1}}
 \def\pref{\prettyref}
 
