--- a/parts/basic-asp.tex
+++ b/parts/basic-asp.tex
@@ -1,5 +1,5 @@
 \Emna{A revoir et parler d'avantage des contraintes}
-In this section, we briefly recapitulate the basic elements of Answer Set Programming (ASP) \cite{baral2003knowledge}, a  declarative language that proved efficient to address search problems. An answer set program is a finite set of rules of the form:
+In this section, we briefly recapitulate the basic elements of Answer Set Programming (ASP) \cite{baral2003knowledge}, a  declarative language that proved efficient to address highly computational problems. An answer set program is a finite set of rules of the form:
 \begin{equation}
 \label{asprule}
   a_{0}\ \leftarrow \ a_{1},\ \ldots,\ a_{m},\ not\ a_{m+1},\ \ldots,\ not\ a_{n}
@@ -8,7 +8,7 @@ where $n \ge m \ge 0$, $a_{0}$ is a propositional atom or $\bot$, all
 $a_{1}, \ldots ,a_{n}$ are propositional atoms, and the symbol ``$not$'' denotes  negation as failure.
 The intuitive reading of such a rule is that whenever $a_{1}, \ldots, a_{m}$
 are known to be true and there is no evidence for any of the negated atoms $a_{m+1}, \ldots, a_{n}$ to be true, then $a_{0}$ has to be true as well.
-If $a_{0} = \bot$, then the rule becomes a constraint (in which case $a_{0}$ is usually omitted).
+If $a_{0} = \bot$, then the rule becomes a constraint (in which case the symbol $\bot$ is usually omitted).
 As $\bot$ can never become true, if the right-hand side of a constraint is validated, it invalidates the whole answer set.
 
 In the ASP paradigm, the search of solutions consists in computing the \emph{answer sets} of a given program.
