--- a/main.tex
+++ b/main.tex
@@ -342,6 +342,8 @@ The originality of our approach relies in the exhaustive enumeration of all poss
 
 
 
+\newcommand{\benchmarksfootnote}{\footnote{All programs and benchmarks are available at http://git.irccyn.ec-nantes.fr/benabdal/ph-properties-with-asp}}
+
 \section{Introduction}
 \input{parts/intro.tex}
 
