--- a/parts/cc.tex
+++ b/parts/cc.tex
@@ -1,3 +1,4 @@
+\Maxime{Début à revoir.}
 This paper a new logical approach to compute attractors in automata networks modeled in Process Hitting. We have developed a new idea to identify the attractors whatever their sizes. The originality of our work consists in using ASP, a powerful declarative programming paradigm. Thanks to the encoding we introduced, we are able to tackle the enumeration of fixed points, cycles and attractors. The major benefit of such a method is to get an exhaustive enumeration of all searching states while still being tractable for models with dozens of interacting components. It is a big challenge that how to identify attractors in the large biological networks. Based on above research, it was proved that we can resolve this problem thanks to the modeling way of biological networks (PH) and the logical programming (ASP).
 
 
