--- a/parts/attractors.tex
+++ b/parts/attractors.tex
@@ -27,12 +27,12 @@ The pseudocode of the presented algorithm is given as Algorithm \ref{alg:PH-attr
 			\hspace{0.2cm}	\textbf{\textit{forall}} $\PHst_i \in \PHl$ \textbf{\textit{do}} 
 				
 				\begin{itemize}
-					\item[] compute the $N$ successors: $\PHst_i \rightarrowtail ... \rightarrowtail \PHst_N$ \\ let $\Delta_N^i=$\{$\PHst_j \in \PHl, 0 \leq j \leq N$\} %be the set of these states
+					\item[] compute the $N$ successors: $\PHst_i \rightarrowtail ... \rightarrowtail \PHst_N$ \\ let $\Delta_N^i=$\{$\PHst_j \in \PHl, i \leq j \leq N$\} %be the set of these states
 					
 					\item[] \textbf{\textit{if}} $\PHst_0 = \PHst_N$ \textbf{\textit{then}} \\
-						\hspace{0.5cm}  $loop(\Delta_N^i) \longleftarrow True$ \\
+						\hspace{0.7cm}  $loop(\Delta_N^i) \longleftarrow True$ \\
 					 \textbf{\textit{else}} \\
-					 	\hspace{0.5cm}  $loop(\Delta_N^i) \longleftarrow False$ \\
+					 	\hspace{0.7cm}  $loop(\Delta_N^i) \longleftarrow False$ \\
 					 \textbf{\textit{end if}} 
 					 
 					\item[] \textbf{\textit{if}} $loop(\Delta_N^i) = True$ \textbf{\textit{then}} \\
@@ -49,6 +49,27 @@ The pseudocode of the presented algorithm is given as Algorithm \ref{alg:PH-attr
 							\hspace{0.7cm} $attractor(\Delta_N^i) \longleftarrow False$ \\
 %						\end{itemize}		
 							\textbf{\textit{end if}} 
+														
+					\item[] \textbf{\textit{if}} $attractor(\Delta_N^i) = True$ \textbf{\textit{then}}\\
+						\hspace{0.7cm} \textbf{\textit{forall}} $\PHst_j, \PHst_k \in \Delta_N^i, j \neq k$ \textbf{\textit{do}} \\								
+								\hspace{1.2cm} \textbf{\textit{if}} $loop(\Delta_k^j) = True$ \textbf{\textit{then}}\\
+									\hspace{1.7cm} $complexLoop(\Delta_N^i) \longleftarrow False$ \\
+									\hspace{1.7cm} $x \longleftarrow j+1$ \\									
+									\hspace{1.7cm} \textbf{\textit{while}} $x \leq k-1 $ \textbf{\textit{and}} $complexLoop(\Delta_N^i) = False$ \textbf{\textit{do}} \\	
+									
+										\hspace{2.1cm} \textbf{\textit{if}} $loop(\Delta_{k+x}^{j+x}) = False$ \textbf{\textit{then}}\\
+											\hspace{2.5cm} $complexLoop(\Delta_N^i) \longleftarrow True$ \\
+										\hspace{2.1cm} \textbf{\textit{end if}} \\
+									\hspace{1.7cm} \textbf{\textit{end while}} \\
+								\hspace{1.2cm} \textbf{\textit{end if}} \\
+						\hspace{0.7cm} \textbf{\textit{end forall}} 	\\
+
+					\hspace{0.7cm} \textbf{\textit{if}} $complexLoop(\Delta_N^i) = False$ \textbf{\textit{then}}\\
+						\hspace{1.2cm}  $attractor(\Delta_N^i) \longleftarrow False$\\
+					\hspace{0.7cm} \textbf{\textit{end if}} 						
+						
+					\textbf{\textit{end if}} \\
+
 					\item[] \textbf{\textit{if}} $attractor(\Delta_N^i) = True$ \textbf{\textit{then}}\\
 					\hspace{0.5cm}  $\Delta_N \longleftarrow \Delta_N \cup \Delta_N^i$ \\
 					\textbf{\textit{end if}} 
