--- a/parts/attractors.tex
+++ b/parts/attractors.tex
@@ -165,11 +165,19 @@ playableInCycle(action(A,I,B,J,K),S) :- candidatePlayable(action(A,I,B,J,K),S), 
 existActionOut :- candidatePlayable(Action,S), not playableInCycle(Action,S). %\label{existActOut1}
 \end{lstlisting}
 
+At this step the question is how to be sure if this attractor of size $N$ is not a set of attractors of size lowest than $N$. The idea is (like descriped in the algorithm \ref{alg:PH-attractor} and lines \ref{loopX}-\ref{constraintloopX}) to do not consider the repeated loops as an attractor. We compute in the predicate \texttt{loopX(S1, S2, X)} if there is as well a loop between the $X^{th}$ successor of \texttt{S1} and the $X^{th}$ successor of \texttt{S2}. It means propably  that a same loop is repeated. In \texttt{notloopX(S1, S2)} we compute if there is at least one $X^{th}$ successor of \texttt{S1} does not have a loop with the $X^{th}$ successor of \texttt{S2}. Finally with the constraint in line \ref{constraintloopX}, we eliminate the case of having the repeated loops.
+
+\begin{lstlisting}
+loopX(S1,S2,X) :- loop(S1+X, S2+X), 0<=X, X<=S2-S1, state(S1;S2;X). %\label{loopX}
+notloopX(S1,S2) :- not loopX(S1,S2,X), 0<=X, X<=S2-S1, state(S1;S2;X). %\label{notloopX}
+ 	:- loop(S1,S2), loop(S1, S2+(S2-S1)), not notloopX(S1,S2). %\label{constraintloopX}
+\end{lstlisting}
+
 The problem of finding attractors in a multi-valued automata network is NP-hard. However, we have good results when the algorithm \ref{alg:PH-attractor} is developed with ASP \Maxime{Je ne suis pas d'accord : on ne traduit pas cet algorithme en ASP ! On écrit autre chose qui doit nous donner un résultat équivalent, mais ce n'est pas un algorithme impératif}. Indeed, we show in Section \ref{sec:results}, by performing a number of computational experiments on biological networks, that the program can tackle even large systems and return a result in few seconds.
 
 %
 %
-%Clearly, all states between any two occurrences of the last state belong to a loop. A loop corresponds to an attractor. We mark all attractor’s states. In the following itera- tions, we will only search for paths in which the last state is not marked.
+%Clearly, all states between any two occurrences of the last state belong to a loop. A loop corresponds to an attractor. We mark all attractor’s states. In the following iterations, we will only search for paths in which the last state is not marked.
 %Until at least one attractor remains unmarked, we can find a path of any length since we can cycle in an attractor forever. However, once all attractors are identified and marked, we will only be able find paths which are shorter than a given length (at most the diameter of the STG). So, when we search for a path of some length k and it does not exist, this means that all attractors are already identified and the algorithm can terminate.
 %If a path of length k does exist and it is loop-free, we double k and continue the search for a path of the new length.
 %We illustrate the algorithm on the example of the Boolean network in Figure 1. The algorithm starts from searching for a path of length $N = 3$
