add link for uploding programs

--- a/main.tex
+++ b/main.tex
@@ -342,7 +342,7 @@ The originality of our approach relies in the exhaustive enumeration of all poss
 
 
 
-\newcommand{\benchmarksfootnote}{\footnote{All programs and benchmarks are available at http://git.irccyn.ec-nantes.fr/benabdal/ph-properties-with-asp}}
+\newcommand{\benchmarksfootnote}{\footnote{All programs and benchmarks are available at http://www.irccyn.ec-nantes.fr/~benabdal/automata-networks-analysis.zip}}
 
 \section{Introduction}
 \input{parts/intro.tex}
