--- a/parts/attractors.tex
+++ b/parts/attractors.tex
@@ -29,7 +29,7 @@ The pseudocode of the presented algorithm is given as Algorithm \ref{alg:PH-attr
 				\begin{itemize}
 					\item[] compute the $N$ successors: $\PHst_i \rightarrowtail ... \rightarrowtail \PHst_N$ \\ let $\Delta_N^i=$\{$\PHst_j \in \PHl, i \leq j \leq N$\} %be the set of these states
 					
-					\item[] \textbf{\textit{if}} $\PHst_0 = \PHst_N$ \textbf{\textit{then}} \\
+					\item[] \textbf{\textit{if}} $\PHst_i = \PHst_N$ \textbf{\textit{then}} \\
 						\hspace{0.7cm}  $loop(\Delta_N^i) \longleftarrow True$ \\
 					 \textbf{\textit{else}} \\
 					 	\hspace{0.7cm}  $loop(\Delta_N^i) \longleftarrow False$ \\
