--- a/parts/cc.tex
+++ b/parts/cc.tex
@@ -1,6 +1,7 @@
 \Maxime{Début à revoir.}
 This paper a new logical approach to compute attractors in automata networks modeled in Process Hitting. We have developed a new idea to identify the attractors whatever their sizes. The originality of our work consists in using ASP, a powerful declarative programming paradigm. Thanks to the encoding we introduced, we are able to tackle the enumeration of fixed points, cycles and attractors. The major benefit of such a method is to get an exhaustive enumeration of all searching states while still being tractable for models with dozens of interacting components. It is a big challenge that how to identify attractors in the large biological networks. Based on above research, it was proved that we can resolve this problem thanks to the modeling way of biological networks (PH) and the logical programming (ASP).
 
+%Perspective: The attractor inverse problem, which involves construct- ing BNs possessing a given attractor structure, is important to network inference from steady-state data. Most microarray- based gene-expression studies do not involve controlled tem- poral experimental data; rather, it is assumed that the data result from sampling from the steady state. Under the BN model, this means that the data come from the attractors.
 
 %In this paper, we proposed a new logical approach to address some dynamical properties of Process Hitting models.
 %The originality of our work consists in using ASP, a powerful declarative programming paradigm.
