--- a/parts/intro.tex
+++ b/parts/intro.tex
@@ -13,7 +13,7 @@ Based on the former, many studies have proven that the computational way of attr
 Therefore, it is meaningful to identify attractors. Of course, these can be done by examining all possible states of a network. However, it would be too time consuming even for small $n$, and not multi-valued network (a boolean network) since $2^n$ states have to be examined. Indeed, if we want to find any \emph{attractor} (\emph{fixed point } or \emph{bassin of attraction}), we may find it by following the trajectory to the attractor starting from a randomly selected state.
 %%%%%%%
 
-\Emna{Les travaux qui ont été faite concernant la recherche des attracteurs}
+\Emna{Les travaux qui ont été faits concernant la recherche des attracteurs}
 
 Our goal in this paper is to develop exhaustive methods to analyze a Biological Regulatory Network (BRN) modeled in Process Hitting (PH). With respect to PH dynamics, this analysis leads to three kinds of results:
 \begin{itemize}
