--- a/parts/results.tex
+++ b/parts/results.tex
@@ -55,8 +55,11 @@ We have constructed the input descriptions of these models, the automata network
 %  ERBB & 42 & 152 & $2^{70}$ & 0.017 & 3 & 0.004 & k & 0\\
 %\hline
 %  TCR & 54 & 156 & $2^{73}$ & 0.021 & 1 & 0.004 & k & 0\\
-%\hline
-  lambdaPhage & 4 & 11 & 48 & 0.003 & 1 & 0.019 & 2 & 2\\
+%\hline  
+   \multirow{3}{*}{lambdaPhage}  & \multirow{3}{*}{4} & \multirow{3}{*}{11} & \multirow{3}{*}{48} & \multirow{3}{*}{0.003} & \multirow{3}{*}{1} & 0.019 & 2 & 1\\
+ & & & & & & 0.033 & 4 & 0\\
+ & & & & & & 0.470 & 20 & 0\\
+
 \hline
  \multirow{3}{*}{hedgehog}  & \multirow{3}{*}{5} & \multirow{3}{*}{11} & \multirow{3}{*}{48} & \multirow{3}{*}{0.003} & \multirow{3}{*}{2} & 0.017 & 2 & 0\\
  & & & & & & 0.050 & 6 & 0\\
@@ -66,9 +69,9 @@ We have constructed the input descriptions of these models, the automata network
  & & & & & & - & - & -\\
  & & & & & & - & - & -\\
 \hline
- \multirow{3}{*}{egf-tnf}  & \multirow{3}{*}{28} & \multirow{3}{*}{56} & \multirow{3}{*}{$2^{28}$} & \multirow{3}{*}{0.005} & \multirow{3}{*}{2} & 0.296 & 2 & 1\\
- & & & & & & 737.8 & 6 & 1\\
- & & & & & & 0.319 & 20 & 0\\
+ \multirow{3}{*}{egf-tnf}  & \multirow{3}{*}{28} & \multirow{3}{*}{56} & \multirow{3}{*}{$2^{28}$} & \multirow{3}{*}{0.005} & \multirow{3}{*}{2} & 0 & 2 & 0\\
+ & & & & & & 9.192 & 8 & 1\\
+% & & & & & & xxx & xx & x\\
 \hline
 \end{tabular}
 \vspace*{4pt}
